# nexus

./: .gitignore  CONTRIBUTING.md  README.md
.github/: dependabot.yml  labeler.yml  settings.yml
.github/workflows/: ci.yml  deploy-backend.yml  labeler.yml  (+2 more)
.husky/: commit-msg  pre-commit  pre-push
backend/: .env.example  .gitignore  README.md  deno.json
docs/: README.md
frontend/: .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  components.json  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
stdb/: Cargo.toml  NOTICE  README.md
stdb/docs/: getting-started.md  migrations.md  schema.md
stdb/scripts/: generate.sh
stdb/skills/nexus-stdb/: SKILL.md
stdb/skills/nexus-stdb/references/: spacetimedb-rust.md
stdb/src/: lib.rs  types.rs
stdb/src/helpers/: activity.rs  auth.rs  mod.rs  thresholds.rs
stdb/src/reducers/: mod.rs
stdb/src/reducers/agent/: heartbeat.rs  mod.rs  register.rs  set_status.rs  update_capabilities.rs
stdb/src/reducers/dev/: seed.rs
stdb/src/reducers/discovered/: discover.rs  mod.rs  review.rs
stdb/src/reducers/ideas/: implement.rs  mod.rs  propose.rs  vote.rs
stdb/src/reducers/messaging/: mod.rs  send.rs  send_project.rs
stdb/src/reducers/projects/: create.rs  mod.rs  update_status.rs
stdb/src/reducers/tasks/: add_dependency.rs  claim.rs  create.rs  mod.rs  update_status.rs
stdb/src/tables/: agent.rs  channel.rs  config.rs  discovered_task.rs  idea.rs  identity_role.rs  message.rs  mod.rs  project.rs  project_channel.rs  project_message.rs  task.rs  task_dependency.rs  vote.rs
(+265 files in other folders)
